After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 775248 - rpi,gl: EGLImage creation errors
rpi,gl: EGLImage creation errors
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.11.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on: 774518
Blocks:
 
 
Reported: 2016-11-28 15:38 UTC by Philippe Normand
Modified: 2016-11-30 08:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
log file (2.24 KB, text/x-log)
2016-11-28 15:38 UTC, Philippe Normand
Details

Description Philippe Normand 2016-11-28 15:38:48 UTC
Created attachment 340924 [details]
log file

+++ This bug was initially created as a clone of Bug #774518 +++

Commit 8c2118823b3d42840cc6f48cbdc0e1b342f90b80 seems to be the culprit. Attaching a log file.
Comment 1 Philippe Normand 2016-11-28 15:40:21 UTC
This happens when trying to play an h264 video with gst-play. I see the errors and then somehow playback starts and works fine but I don't think we should see those errors in the first place :)
Comment 2 Matthew Waters (ystreet00) 2016-11-29 04:11:10 UTC
I cannot reproduce with git master of everything.  Do you have master of gst-omx?
Comment 3 Philippe Normand 2016-11-29 08:14:57 UTC
Yes, using master of gst-omx too.. Humm I'll double-check again here then.
Comment 4 Matthew Waters (ystreet00) 2016-11-30 06:47:10 UTC
My guess is that GST_GL_HAVE_DMABUF is 0 for you and the egl_context isn't passed to eglImageCreateImage.
Comment 5 Matthew Waters (ystreet00) 2016-11-30 08:33:06 UTC
Confirmed on IRC.

commit 1db88cbee7aa071e7fdd521dad01bcd70e1f1d2f
Author: Matthew Waters <matthew@centricular.com>
Date:   Wed Nov 30 19:26:51 2016 +1100

    glmemoryegl: remove spurious #if GST_GL_HAVE_DMABUF conditions
    
    8c2118823b3d42840cc6f48cbdc0e1b342f90b80 had some incorrect preprocessor
    conditions that aren't actually needed.  Remove them.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=775248